--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -r app/requirements.txt
+      - run: pip install --upgrade Werkzeug
       - run: python app/test_app.py
 
   build_and_push_to_docker_hub:
