--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${repository_name}:latest -f app/Dockerfile app
-      - run: docker push ${{ secrets.DOCKER_USERNAME }}/${repository_name}:latest
+      - run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ci-cd-with-argocd-helm-and-github-actions:latest -f app/Dockerfile app
+      - run: docker push ${{ secrets.DOCKER_USERNAME }}/ci-cd-with-argocd-helm-and-github-actions:latest
 
   release_helm_chart:
     permissions:
